--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,5 +42,5 @@ jobs:
           script: |
             docker ps
             $( aws ecr get-login --no-include-email )
-            docker pull ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/demo-image:latest
-            docker run -d -p 80:80 ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/demo-image:latest
+            docker pull ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1/demo-image:latest
+            docker run -d -p 80:80 ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1.amazonaws.com/demo-image:latest
