--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,9 +5,7 @@ on:
     branches: [ master ]
 
 env:
-  AWS_DEFAULT_REGION: eu-central-1
   AWS_DEFAULT_OUTPUT: json
-  AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
@@ -27,10 +25,10 @@ jobs:
         run: |
           docker build \
           -t demo-image \
-          -t $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/demo-image:latest .
+          -t 475402197987.dkr.ecr.eu-central-1.amazonaws.com/demo-image:latest .
 
       - name: Push
-        run: docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/demo-image
+        run: docker push 475402197987.dkr.ecr.eu-central-1.amazonaws.com/demo-image
 
       - name: Executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@master
@@ -42,5 +40,5 @@ jobs:
           script: |
             docker ps
             $( aws ecr get-login --no-include-email )
-            docker pull ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1/demo-image:latest
-            docker run -d -p 80:80 ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1.amazonaws.com/demo-image:latest
+            docker pull 475402197987.dkr.ecr.eu-central-1/demo-image:latest
+            docker run -d -p 80:80 475402197987.dkr.ecr.eu-central-1.amazonaws.com/demo-image:latest
